Fixed running with intermediate program and policy file (finally).