@@ -8,7 +8,7 @@ import static ro.infoiasi.ip.easylearn.utils.FileManager.getCurrentWorkingDirect
 import static ro.infoiasi.ip.easylearn.utils.FileManager.getFilePathSeparator;
 import static ro.infoiasi.ip.easylearn.utils.ProcessManager.removePathEnd;
 
-public class JavaCommandBuilder implements CommandBuilder {
+public class JavaCommandBuilder extends CommandBuilder {
     @Override
     public String buildCompileCommand(List<SourceFile> sources, String rootDirectoryPath) {
         return "javac " + rootDirectoryPath + getFilePathSeparator() + "*.java";
@@ -18,5 +18,12 @@ public class JavaCommandBuilder implements CommandBuilder {
     public String buildRunCommand(String rootDirectoryPath, String mainSource) {
         String javaTitle = removePathEnd(mainSource);
         return "java -cp " + getCurrentWorkingDirectory()+"/"+ rootDirectoryPath + " " + javaTitle;
+    }
+
+    @Override
+    public String buildRunCommand(String rootDirectoryPath, String mainSource, String policyFilePath) {
+        String javaTitle = removePathEnd(mainSource);
+        return "java -cp " + rootDirectoryPath +
+                " -Djava.security.manager -Djava.security.policy=" + policyFilePath + " " + javaTitle;
     }
 }
